#
#  MusicBrainz -- The Internet music metadatabase
#
#  Copyright (C) 2000 Robert Kaye
#  
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License, or (at your option) any later version.
#  
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#  
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
#    $Id$
#

mb_incdir = $(includedir)/musicbrainz3
mb_inc_HEADERS = \
	artist.h artistalias.h defines.h disc.h entity.h factory.h filters.h \
	includes.h iwebservice.h lists.h mbxmlparser.h metadata.h model.h \
	musicbrainz.h relation.h release.h releaseevent.h results.h track.h \
	user.h utils.h webservice.h mb_c.h query.h

EXTRA_DIST = SConscript

